# wasm_spectogram

./: Cargo.toml  Trunk.toml  index.html  index2.html  index2.js
res/web/: styles.css
src/: main.rs
