[package]
name = "wasm_spectogram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document", "ImageData", "ImageBitmap", "MediaStreamConstraints", "Navigator", "AudioContext", "AudioContextOptions", "MediaStream", "AudioDestinationNode", "AudioNode", "AudioParam", "MediaStreamAudioSourceNode", "AnalyserNode", "MediaStreamConstraints", "MediaDevices", "MediaCapabilities", "Navigator" ] }
rustfft = "*"
